<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ToDoList</string>
    <string name="add_button_caption">Add</string>
    <string name="task_edit_comment_label">Comment</string>
    <string name="task_edit_priority_label">Priority</string>
    <string name="task_edit_title_label">Title</string>
    <string name="task_edit_priority_low_label">Low</string>
    <string name="task_edit_priority_high_label">High</string>
    <string name="task_edit_save_button">Save</string>
    <string name="sortBy">Sort by:</string>
    <string name="sortBy_Priority">Priority</string>
    <string name="sortBy_DueDate">Due Date</string>
    <string name="sortBy_CreationDate">Creation Date</string>
    <string name="showDoneItems">Show done items</string>

</resources>